--- a/gql-sample-service.csproj
+++ b/gql-sample-service.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="0.6.0" />
     <PackageReference Include="HotChocolate.AspNetCore.GraphiQL" Version="0.6.0" />
     <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="0.6.0" />
